trunk/Archive2/10/29b5451d1085e4/output
main.cpp: In function 'int main()':
main.cpp:11:31: error: 'strcpy' was not declared in this scope
     strcpy(line, satir.c_str()); 
                               ^
main.cpp:8:9: warning: unused variable 'length' [-Wunused-variable]
     int length = 0;
         ^
